Fix textarea horizontal alignment

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
 }
 
 textarea {
-    background-color: midnightblue;
     color: white;
     padding: 1rem;
     border: none;
